Prep for new branch

--- a/archived_code/v3/Dockerfile
+++ b/archived_code/v3/Dockerfile
@@ -1,8 +1,8 @@
 FROM python:slim
 WORKDIR /app
 COPY ./requirements.txt /app
+RUN apt update && apt install -y clinfo intel-opencl-icd
 RUN pip install --no-cache-dir --upgrade -r requirements.txt
-# RUN apt update && apt install -y clinfo intel-opencl-icd
 # RUN wget -O- https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB \
 # | gpg --dearmor | tee /usr/share/keyrings/oneapi-archive-keyring.gpg > /dev/null
 # RUN echo "deb [signed-by=/usr/share/keyrings/oneapi-archive-keyring.gpg] https://apt.repos.intel.com/oneapi all main" | tee /etc/apt/sources.list.d/oneAPI.list
