Validation of target image size to ensure YuNet can consume it.  Initial functional testing with OpenCL including early observations. New code to parse the collations directory to obtain links to target image files.

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,10 @@ pyvenv.cfg
 
 # autoface assets
 result.*
-target*.*
+*target*.*
 event*.*
+opencl_*
+collations
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
